kubernetes/remote_version/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: rgoussey/frontend
        name: frontend
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80 # inside the cluster
    targetPort: 80 # pod port, same as containerPort
  selector:
    app: frontend
