kubernetes/remote_version/ticket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ticket
  name: ticket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket
  template:
    metadata:
      labels:
        app: ticket
    spec:
      containers:
      - image: thomasneuser/ticket:latest
        imagePullPolicy: Never
        name: ticket
        ports:
        - containerPort: 2300
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ticket
  name: ticket
spec:
  ports:
  - name: "2300"
    port: 2300 # inside the cluster
    targetPort: 2300 # pod port, same as containerPort
  selector:
    app: ticket
